--- a/src/components/TodosContainer.css
+++ b/src/components/TodosContainer.css
@@ -1,3 +1,3 @@
 .TodoContainer {
-  @apply items-center flex flex-col;
+  @apply items-center flex flex-col overflow-y-auto max-h-full h-full relative flex-grow;
 }
